# GORCA_V5.0

./: MakefileCARE_alternative  README
CARE_SST1M/: CameraAndReadout.cpp  FADC.cpp  FADC.h  Makefile  Makefile.depend  ReadConfig.cpp  ReadConfig.h  TelescopeData.cpp  TelescopeData.h  TraceGenerator.cpp  TriggerTelescopeCameraSnapshot.cpp  TriggerTelescopeNextNeighbor.cpp  TriggerTelescopeNextNeighbor.h  test.root
CARE_SST1M/VBF-0.3.4/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  libtool
CARE_SST1M/VBF-0.3.4/VBF/: Adler32.lo  FPAdler.h  FPBasics.cpp  FPBasics.h  FPBasics.lo  FPFDRead.cpp  FPFDRead.lo  FPFDWrite.cpp  FPFDWrite.lo  FPIO.cpp  FPIO.lo  FPIOCommon.lo  FPIOStats.lo  Makefile  Makefile.am  Makefile.in  VArrayEvent.cpp  VArrayEvent.h  VArrayEvent.lo  VBankFileBzip2Reader.lo  VBankFileGzipReader.lo  VBankFileReader.cpp  VBankFileReader.h  VBankFileReader.lo  VBankFileReaderBase.h  VBankFileStreamReader.cpp  VBankFileStreamReader.h  VBankFileStreamReader.lo  VBankFileWriter.cpp  VBankFileWriter.lo  VBankName.h  VBitParser.cpp  VBitParser.h  VBitParser.lo  VChiLASimulationData.lo  VChiLASimulationHeader.lo  VCorsikaSimulationData.lo  VDatum.cpp  VDatum.lo  VEventOverflow.h  (+19 more)
CARE_SST1M/VBF-0.3.4/VBF/.deps/: Adler32.Plo  FPBasics.Plo  FPFDRead.Plo  FPFDWrite.Plo  FPIO.Plo  FPIOCommon.Plo  FPIOStats.Plo  VArrayEvent.Plo  VBankFileBzip2Reader.Plo  VBankFileGzipReader.Plo  VBankFileReader.Plo  VBankFileStreamReader.Plo  VBankFileWriter.Plo  VBitParser.Plo  VChiLASimulationData.Plo  VChiLASimulationHeader.Plo  VCorsikaSimulationData.Plo  VDatum.Plo  VEventOverflow.Plo  VException.Plo  VGPSDecoder.Plo  VKascadeSimulationData.Plo  VKascadeSimulationHeader.Plo  VRawDataExceptions.Plo  VRawDataFileRead.Plo  VRawEventParser.Plo  VSimulationData.Plo  VSimulationHeader.Plo
CARE_SST1M/VBF-0.3.4/lib/include/VBF/: FPFDRead.h  FPFDWrite.h  FPIO.h  VBankFileWriter.h  VDatum.h  VEventType.h  VRawDataFileRead.h  VRawEventParser.h  Words.h
CARE_SST1M/VBF-0.3.4/lib/lib/: libVBF.la
CARE_SST1M/VBF-0.3.4/lib/lib/pkgconfig/: VBF.pc
CARE_SST1M/VBF-0.3.4/scripts/: Makefile  Makefile.in
CARE_SST1M/VBF-0.3.4/vbfTools/: Makefile  Makefile.am  Makefile.in  vbfCheck  vbfCheck.cpp  vbfConfig  vbfList  vbfPed  vbfPed.cpp  vbfReindex  vbfRepTel  vbfSummary  vbfZeroSup  vbfZip
CARE_SST1M/VBF-0.3.4/vbfTools/.deps/: vbfCheck.Po  vbfConfig-vbfConfig.Po  vbfList.Po  vbfPed.Po  vbfReindex.Po  vbfRepTel.Po  vbfSummary.Po  vbfZeroSup.Po  vbfZip.Po
CARE_SST1M/VBF-0.3.4/vbfTools/.libs/: vbfCheck  vbfList  vbfRepTel  vbfSummary  vbfZip
Run/: biascurve.sh  defaults.sh  local.sh  local_bigmem.sh  local_cta.sh  local_long.sh  parser.py
care_cfg/: SST-1M.cfg  SST-1M_DEV.cfg
corsikaSimulationTools/: CHANGELOG  Makefile  README  README.corsikaIOreader  VCORSIKARunheader_Dict.cpp  VCORSIKARunheader_Dict.h  atmosphereAndCherenkovLight  (+6 more)
(+219 files in other folders)
